# sport_programming

./: README.md  ali-algo-club.md
algorithms/bfs/: main.cpp  solution.txt
algorithms/convex_hull/: in.txt  main.cpp  my_solution.txt  plot.ods
algorithms/cyclic_graph/: main.py
algorithms/dfs/: main.cpp  solution.txt
algorithms/disjoint_set_union/: CMakeLists.txt  disjoint_set_union.h  main.cpp
algorithms/distributed_sort/: CMakeLists.txt  main.cpp
algorithms/external_sort/: main.cpp
algorithms/geometry/: CMakeLists.txt  main.cpp
algorithms/graph/: CMakeLists.txt  backup.graph.h  data.txt  graph.h  main.cpp
algorithms/huffman/: CMakeLists.txt  book.fb2  book_large.fb2  main.cpp
algorithms/huffman_compression/: CMakeLists.txt  book.fb2  main.cpp  tools.cpp  tools.h  zip.cpp  zip.h
algorithms/long_arithmetics/: CMakeLists.txt  bignum.cpp  bignum.h  in01.txt  main.cpp
algorithms/matrix/: main.cpp  stats.ods
algorithms/power/: main.cpp
algorithms/radix_sort/: CMakeLists.txt  debug_build.sh  main.cpp  radix.cpp  radix.h
algorithms/red_black_tree/: CMakeLists.txt  main.cpp  old_rbtree.h  rbtree.h  tools.cpp  tools.h
algorithms/roman2integer/: main.py
algorithms/sorts/: CMakeLists.txt  heap.h  heap_sort.h  main.cpp  merge_sort.h  plot.ods  quick_sort.h  radix_sort.h
algorithms/strongly_connected_components/: main.cpp  solution.txt
algorithms/vector_vs_list/: main.cpp
codeforces/: Makefile_template  build.sh  debug_build.sh  template.cpp
codeforces/001A/: main.cpp
codeforces/001B/: main.cpp
codeforces/002B/: main.cpp  x
codeforces/003B/: main.cpp
codeforces/004A/: main.cpp
codeforces/004C/: main.cpp
codeforces/005B/: main.cpp
codeforces/005C/: main.cpp  x
codeforces/007B/: .gdbinit  in3.txt  main.cpp
codeforces/061A/: main.cpp
codeforces/071A/: main.cpp
codeforces/110A/: main.cpp
codeforces/119A/: main.cpp
codeforces/122A/: main.cpp
codeforces/129B/: main.cpp
codeforces/131D/: main.cpp
codeforces/133A/: main.cpp
codeforces/144A/: main.cpp
codeforces/158B/: main.cpp
codeforces/158D/: main.cpp
codeforces/160A/: main.cpp
codeforces/1A/: main.cpp
codeforces/278C/: main.cpp
codeforces/379A/: main.cpp
codeforces/379B/: .gdbinit  main.cpp
codeforces/441A/: main.cpp
codeforces/451C/: in1.txt  in2.txt
codeforces/527/: main.cpp
codeforces/round195/: debug_build.sh
leetcode/: build.sh  run.sh  template.cpp
leetcode/001/: main.cpp
leetcode/002/: main.cpp
leetcode/003/: in3.txt  main.cpp
leetcode/024/: main.cpp
leetcode/033/: main.cpp
leetcode/1091/: slow_complicated_solution.cpp
leetcode/3646/: main.cpp
leetcode/853/: main.cpp
projecteuler/: template.cpp
projecteuler/001/: problem001.beam  problem001.erl
projecteuler/002/: problem002.erl
projecteuler/003/: p003.erl
projecteuler/004/: problem004.erl
projecteuler/005/: problem005.erl
projecteuler/006/: problem006.erl
projecteuler/007/: problem007.erl  problem007.py  problem007_multithreaded.erl
projecteuler/017/: problem017.erl
projecteuler/023/: main.cpp
projecteuler/027/: main.cpp
projecteuler/031/: main.cpp  p.py
projecteuler/032/: main.cpp
projecteuler/033/: main.cpp
projecteuler/037/: main.cpp  main.py
projecteuler/038/: main.py
projecteuler/039/: main.cpp
projecteuler/041/: main.cpp
projecteuler/043/: main.cpp
projecteuler/044/: main.cpp
projecteuler/046/: main.cpp
projecteuler/047/: main.cpp
projecteuler/049/: main.cpp
projecteuler/050/: main.cpp
projecteuler/052/: main.cpp
projecteuler/053/: p.py
projecteuler/054/: main.py  somebodys_short_solution.py
projecteuler/055/: main.py
timus/: build.sh  debug_build.sh
(+566 files in other folders)
